{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 111,
  "lineage": "7613e66a-f555-5154-e135-6481c2945453",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "frontend-result",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/frontend-result",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "frontend-result",
                "namespace": "default",
                "resource_version": "1738",
                "uid": "fd1b629d-617a-4e81-bbf2-17c5ebf62d32"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "result",
                        "port": [
                          {
                            "name": "",
                            "number": 5001
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "frontend-vote",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/frontend-vote",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "frontend-vote",
                "namespace": "default",
                "resource_version": "1737",
                "uid": "2e0fb0ef-533b-4fcb-9bcf-1462cf1fb8ea"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "vote",
                        "port": [
                          {
                            "name": "",
                            "number": 5000
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/eval-terraform/global/networks/eval-terraform-vpc",
            "mtu": 0,
            "name": "eval-terraform-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "eval-terraform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eval-terraform/global/networks/eval-terraform-vpc"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-29T08:15:25.910-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/eval-terraform/regions/europe-west1/subnetworks/eval-terraform-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "eval-terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/eval-terraform/global/networks/eval-terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eval-terraform",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eval-terraform/regions/europe-west1/subnetworks/eval-terraform-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gke_cluster.google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/postgres",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"ingress\":true}"
                },
                "generation": 0,
                "labels": {
                  "app": "postgres"
                },
                "name": "postgres",
                "namespace": "default",
                "resource_version": "1742",
                "uid": "507b3b29-6008-439b-abfe-02dce1f59d32"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.56.4.33",
                "cluster_ips": [
                  "10.56.4.33"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/redis",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"ingress\":true}"
                },
                "generation": 0,
                "labels": {
                  "app": "redis"
                },
                "name": "redis",
                "namespace": "default",
                "resource_version": "1758",
                "uid": "89ebfdc2-e0bb-4456-b36f-3458710366c1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.56.12.104",
                "cluster_ips": [
                  "10.56.12.104"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "redis-service",
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "result",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/result",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"ingress\":true}"
                },
                "generation": 0,
                "labels": {
                  "app": "result"
                },
                "name": "result",
                "namespace": "default",
                "resource_version": "1776",
                "uid": "6bfe9c8b-9973-4429-9e2c-88ebd99e3085"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.56.3.65",
                "cluster_ips": [
                  "10.56.3.65"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31001,
                    "port": 5001,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "result"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "vote",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/vote",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"ingress\":true}",
                  "cloud.google.com/neg-status": "{\"network_endpoint_groups\":{\"5000\":\"k8s1-540a37bc-default-vote-5000-4f899b96\"},\"zones\":[\"europe-west1-b\",\"europe-west1-c\",\"europe-west1-d\"]}"
                },
                "generation": 0,
                "labels": {
                  "app": "vote"
                },
                "name": "vote",
                "namespace": "default",
                "resource_version": "1756",
                "uid": "4dd1c517-d3c1-4fb4-94b7-a3558658415a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.56.1.209",
                "cluster_ips": [
                  "10.56.1.209"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "vote-service",
                    "node_port": 31000,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "vote"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.gke_cluster.google_compute_network.myvpc",
            "module.gke_cluster.google_compute_subnetwork.mysubnet",
            "module.gke_cluster.google_container_cluster.mycluster"
          ]
        }
      ]
    }
  ]
}